@@ -46,3 +46,14 @@ py-ae=Py Alternative Energy
 pyhardmode=Pyanodons Hard Mode
 msp=More Science Packs
 science-pack-galore=Science Pack Galore
+
+[tiergen-debug-command]
+help=Recursively finds the items that were, as a core, deemed incalculable
+no-item-passed=Please pass an item ID
+already-debugging=Already debugging. Please wait
+calculated-tier='__1__' is already calculable: Tier __2__
+
+invalid-item='__1__' is not a valid item
+errored-out='__1__' had an error while calculating. Catch the pcall'ed error to debug.
+no-recipe='__1__' has no known way of obtaining it.
+invalid-reason='__1__' failed: __2__
